[tool.poetry]
name = "chess-bot-1"
version = "0.1.0"
description = ""
authors = ["paridhi7 <paridhi.agarwal7@yahoo.in>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.8"
drawsvg = "^1.5"
ipython = "^7.14"
python-chess = "^0.31.0"
cairosvg = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
